# guloader

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: manga-catalog.yml  manga-monitor.yml
data/: guloader.db
src/: config.rs  database.rs  error.rs  main.rs  models.rs  registry.rs  storage.rs  traits.rs  utils.rs
src/checkers/: eros.rs  madara.rs  mod.rs
src/downloaders/: eros.rs  madara.rs
src/scanners/: eros.rs  madara.rs  mod.rs  scanners.rs
src/scanners/scanners/: eros.rs
