[package]
name = "guloader"
version = "0.1.0"
edition = "2021"
authors = ["GuLoader Team"]
description = "Professional manga monitoring and downloading system"
license = "MIT"
repository = "https://github.com/nobottomlinename/guloader"
keywords = ["manga", "monitor", "downloader", "scraper"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# HTML parsing
scraper = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# ZIP compression
zip = "0.6"

# URL handling
url = "2.0"

# Regex
regex = "1.0"

# Progress bars
indicatif = "0.17"

# Configuration
config = "0.13"

# Retry logic
backoff = "0.4"

# Rate limiting
governor = "0.6"

# Image processing (for thumbnails)
image = "0.24"

# Compression
flate2 = "1.0"

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# ZIP compression

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"

[[bin]]
name = "guloader"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
